Bug #96784 --> avoid infinite recursion in the bin hex decoder when the data fork gives us back macbinhex content as the content type. sr=darin/sspitzer